# handwriting-ai

./: .dockerignore  .env.example  .gitignore  .yamllint  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  tmp_watcher_before.txt  verify_upstash.py
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: handai.toml  trainer.toml
docs/: Accuracy-Competition-Proposal.md  Calibration-Refactor-Plan.md  Digits-Service-Plan.md  RICH_TRAINING_EVENTS.md  TRAINING_PERFORMANCE_OPTIMIZATION.md  TRAINING_PERFORMANCE_OPTIMIZATION.md.part1  WORKER_VOLUME_AND_AUGMENTATION.md  failure_watcher.md  keyspace_notifications_comparison.md  train-command-implementation.md
scripts/: __init__.py  check_redis.py  configure_redis_keyspace.py  guard_checks.py  prestart.py  rq_failure_watcher.py  rq_keyspace_watcher.py  rq_worker.py  seed_model.py  test_keyspace_notifications.py  train_mnist_resnet18.py  worker.py
scripts/guards/: __init__.py  exceptions_rules.py  logging_rules.py  typing_rules.py  util.py
seed/: README.md
seed/digits/models/mnist_resnet18_v1/: manifest.json
src/handwriting_ai/: __init__.py  config.py  errors.py  logging.py  middleware.py  monitoring.py  preprocess.py  request_context.py  version.py
src/handwriting_ai/api/: __init__.py  app.py  schemas.py
src/handwriting_ai/events/: digits.py
src/handwriting_ai/inference/: engine.py  manifest.py  types.py
src/handwriting_ai/jobs/: __init__.py  digits.py  failure_watcher.py
src/handwriting_ai/jobs/watcher/: __init__.py  adapters.py  logic.py  notify.py  ports.py  publisher.py  runner.py  store.py  watcher.py
src/handwriting_ai/training/: __init__.py  artifacts.py  augment.py  calibrate.py  dataset.py  loops.py  memory_diagnostics.py  mnist_train.py  optim.py  progress.py  resources.py  runtime.py  safety.py  train_config.py  train_types.py  train_utils.py
src/handwriting_ai/training/calibration/: cache.py  calibrator.py  candidates.py  checkpoint.py  ds_spec.py  measure.py  orchestrator.py  runner.py  signature.py
tests/: __init__.py  _mnist_raw.py  test_admin_upload.py  test_admin_upload_reload_error.py  test_api.py  test_api_bg_and_upload_more.py  test_api_corrupt_image.py  test_api_handlers.py  test_api_handlers_direct.py  test_api_helpers.py  test_api_models_active.py  test_api_more.py  test_api_read_not_ready.py  test_api_read_predict_error.py  test_api_reload_bg.py  test_api_strict_multipart.py  test_bg_reloader.py  test_bg_reloader_edges.py  test_cache_coverage.py  test_calibrate.py  test_calibrate_workers_low_mem.py  test_calibration_calibrator_budgets.py  test_calibration_calibrator_failure.py  test_calibration_checkpoint_errors.py  test_calibration_measure.py  test_calibration_measure_cleanup.py  test_calibration_measure_safe_loader.py  test_calibration_orchestrator_coverage.py  test_calibration_runner_and_orchestrator.py  test_calibration_runner_helpers.py  test_calibration_runner_internal.py  test_calibration_runner_subprocess_integration.py  test_config.py  test_config_and_resources_edges.py  test_config_env_more_2.py  test_config_env_paths_and_more.py  test_config_more.py  test_config_parsing_errors.py  test_config_retention.py  test_dataloader_config.py  (+107 more)
typings/threadpoolctl/: __init__.pyi
